# basic_mcp_server

./: README.md  pyproject.toml
mcp_clients/: client.py  ollama_client.py  ollama_quick_start.py
mcp_servers/: main.py  streamable.py
tests/: test_server.py
